Enhance SentimentAnalysis component with action plan filtering functionality
- Introduced ActionPlanFilterModal to allow users to filter reviews based on date range and sentiment before generating action plans.
- Updated state management to handle active filters and modal visibility, improving user interaction and control over sentiment analysis.
- Enhanced localization files to include new strings for action plan filtering, ensuring accessibility for both English and French users.
- Improved validation logic in the sentiment analysis function to enforce required filters and date range constraints.

This update strengthens the SentimentAnalysis component by providing users with more granular control over their action plans, leading to a more tailored and effective analysis experience.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -357,6 +357,23 @@
       "topic": "Topic:"
     }
   },
+  "actionPlanFilter": {
+    "title": "Filter Reviews for Action Plan",
+    "dateRange": "Date Range",
+    "startDate": "Start Date",
+    "endDate": "End Date",
+    "sentiment": "Sentiment",
+    "positive": "Positive",
+    "negative": "Negative",
+    "neutral": "Neutral",
+    "cancel": "Cancel",
+    "generate": "Generate Action Plan",
+    "generating": "Generating...",
+    "pleaseSelectDateRange": "Please select a date range",
+    "pleaseSelectSentiment": "Please select a sentiment",
+    "dateRangeExceedsThreeMonths": "Date range cannot exceed 3 months",
+    "startDateAfterEndDate": "Start date must be before end date"
+  },
   "monthlySummary": {
     "title": "Monthly Summary",
     "subtitle": "AI-generated insights from customer reviews",
