Enhance ActionPlanFilterModal with improved UI and localization support
- Updated ActionPlanFilterModal to include a new info note about the maximum date range, enhancing user guidance during filtering.
- Improved the modal's layout with better spacing, typography, and visual elements, including the use of Paper and Divider components for a cleaner design.
- Enhanced sentiment selection with Paper components for better visual feedback on selected options, improving user interaction.
- Updated localization files for English and French to include the new date range note, ensuring accessibility for all users.

This update strengthens the ActionPlanFilterModal by providing a more intuitive and visually appealing interface, leading to a better user experience during action plan filtering.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -362,6 +362,7 @@
     "dateRange": "Date Range",
     "startDate": "Start Date",
     "endDate": "End Date",
+    "dateRangeNote": "Maximum date range: 3 months",
     "sentiment": "Sentiment",
     "positive": "Positive",
     "negative": "Negative",
