Enhance CompanyPage with new sidebar and monthly summary comparison functionality
- Added CompanyPageSidebar component for improved navigation and section management within the CompanyPage.
- Integrated a button in the MonthlySummary component to allow users to compare months, enhancing data analysis capabilities.
- Updated localization files for English and French to include new sidebar labels and comparison button text, ensuring accessibility for all users.
- Refactored the CompanyPage layout to accommodate the new sidebar and improve overall structure and user experience.

This update strengthens the CompanyPage by providing users with better navigation and enhanced insights into monthly data comparisons, leading to a more intuitive and informative interface.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -720,7 +720,14 @@
     "deleteCompanySuccess": "Company deleted successfully",
     "hasReply": "Has Reply",
     "replies": "Replies",
-    "compareMonths": "Compare Months"
+    "compareMonths": "Compare Months",
+    "sidebar": {
+      "overview": "Overview",
+      "reviews": "Reviews",
+      "analytics": "Analytics",
+      "locations": "Locations",
+      "settings": "Settings"
+    }
   },
   "footer": {
     "privacyPolicy": "Privacy Policy",
