Enhance PlatformConnectionDialog and CompanyPage with new review limit notifications and date filter functionality
- Added review limit notifications in PlatformConnectionDialog to inform users about review pulling limits based on their plan.
- Updated localization files to include new strings for review limit messages, ensuring clarity for users.
- Enhanced CompanyPage with a new date range filter feature, allowing users to select predefined date ranges for data analysis.
- Introduced a custom date picker modal for more flexible date range selection, improving user experience and control over data filtering.

This update strengthens the user interface by providing essential information regarding review limits and enhancing the filtering capabilities on CompanyPage, leading to a more informative and user-friendly experience.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -5,6 +5,7 @@
     "success": "Success",
     "save": "Save",
     "cancel": "Cancel",
+    "apply": "Apply",
     "edit": "Edit",
     "delete": "Delete",
     "search": "Search",
@@ -569,7 +570,9 @@
     "connectPlatformToLocation": "Connect Platform to Location",
     "selectPlatform": "Select a Platform",
     "jobCreatedMessage": "A job has been created to get your reviews. Reviews will be available shortly.",
-    "slugAlreadyExists": "This platform location ID already exists in the system. If this page belongs to you, please contact tech@boresha.ca for assistance."
+    "slugAlreadyExists": "This platform location ID already exists in the system. If this page belongs to you, please contact tech@boresha.ca for assistance.",
+    "reviewsDateLimit": "Reviews will be pulled from January 1, {{year}} onwards",
+    "reviewsLimitFree": "Only the last 25 reviews will be pulled (free plan limit)"
   },
   "pricing": {
     "title": "Pricing",
@@ -661,6 +664,13 @@
     "dataFiltersDescription": "Filter all data on this page by location, date, keyword, rating, and topic",
     "clearAll": "Clear all",
     "allLocations": "All Locations",
+    "dateRange": "Date Range",
+    "ytd": "YTD",
+    "last3Months": "Last 3 Months",
+    "last6Months": "Last 6 Months",
+    "last12Months": "Last 12 Months",
+    "custom": "Custom",
+    "customDateRange": "Custom Date Range",
     "fromDate": "From Date",
     "toDate": "To Date",
     "keyword": "Keyword",
