Enhance CompanyPage with new reply filtering options and localization updates
- Added new filtering options for replies, allowing users to filter reviews based on the presence of replies (With Replies, Without Replies).
- Updated localization files for English and French to include new strings for reply filters, ensuring clarity and accessibility for users.
- Refactored the CompanyPage layout to incorporate the new filtering options, improving user experience and data management.

This update strengthens the filtering capabilities on CompanyPage, providing users with more control over their review analysis and enhancing the overall interface.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -730,6 +730,9 @@
     "deleteCompanySuccess": "Company deleted successfully",
     "hasReply": "Has Reply",
     "replies": "Replies",
+    "filterByReplies": "Filter by Replies",
+    "withReplies": "With Replies",
+    "withoutReplies": "Without Replies",
     "compareMonths": "Compare Months",
     "sidebar": {
       "overview": "Overview",
