Enhance ReviewComponent and CompanyPage with ImprovementsCard and negative review analysis
- Added the ImprovementsCard component to display insights and recommendations based on negative reviews, enhancing user engagement with actionable data.
- Updated ReviewComponent to include a visual indicator for negative reviews, improving the user experience by highlighting areas needing attention.
- Implemented logic in CompanyPage to analyze negative reviews and generate recommendations based on keywords and topics, providing users with valuable insights for improvement.
- Updated localization files for English and French to include new strings related to the ImprovementsCard, ensuring clarity and accessibility for users.

This update strengthens the review analysis capabilities on CompanyPage, offering users a more comprehensive understanding of negative feedback and actionable recommendations for improvement.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -742,6 +742,40 @@
       "settings": "Settings"
     }
   },
+  "improvementsCard": {
+    "title": "Areas for Improvement",
+    "subtitle": "Key insights from negative reviews",
+    "negativeReviewsCount": "Negative Reviews",
+    "negativeReviewsPercentage": "Percentage",
+    "outOfTotal": "out of {{total}} reviews",
+    "ofAllReviews": "of all reviews",
+    "topPriorities": "Top Priorities",
+    "viewAllRecommendations": "View All Recommendations",
+    "hideRecommendations": "Hide All Recommendations",
+    "filterNegativeReviews": "View Negative Reviews",
+    "noNegativeReviews": "No negative reviews found",
+    "recommendationsByCategory": "Recommendations by Category",
+    "priority": "Priority",
+    "quickWin": "Quick Win",
+    "mentionedInKeywords": "Mentioned in {{count}} keyword",
+    "mentionedInKeywords_plural": "Mentioned in {{count}} keywords",
+    "mentionedInTopics": "{{count}} topic",
+    "mentionedInTopics_plural": "{{count}} topics",
+    "category": {
+      "service": "Service",
+      "staff": "Staff",
+      "quality": "Quality",
+      "price": "Price",
+      "cleanliness": "Cleanliness",
+      "ambiance": "Ambiance",
+      "food": "Food",
+      "other": "Other"
+    }
+  },
+  "reviewComponent": {
+    "needsAttention": "Needs Attention",
+    "negativeReview": "Negative Review"
+  },
   "footer": {
     "privacyPolicy": "Privacy Policy",
     "termsOfUse": "Terms of Use",
