--- a/reviews/src/iойдет/locales/fr.json
+++ b/reviews/src/iойдет/locales/fr.json
@@ -183,7 +183,7 @@
     "keywordAnalysis": "Analyse des mots-clés",
     "topicAnalysis": "Analyse des sujets",
     "trendingPositive": "Positif en tendance",
-    "trendingNegative": "Négatif en tendance sensibilité au contexte,
+    "trendingNegative": "Négatif en tendance",
     "keyTopics": "Sujets clés"
   },
   "monthlySummary": {
