Add AverageRatingCard component and enhance localization for rating messages
- Introduced the AverageRatingCard component to display average ratings on the CompanyPage, improving the presentation of review statistics.
- Updated filtering logic to show reviews based on selected ratings, enhancing user control over displayed data.
- Added new rating messages in English and French localization files to provide users with contextual feedback based on their ratings.
- Adjusted layout on CompanyPage to accommodate the new AverageRatingCard, ensuring a cohesive user experience.

This update enhances the CompanyPage by providing clearer insights into average ratings and improving the overall user interface with meaningful feedback during review analysis.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -689,6 +689,13 @@
     "averageRating": "Average Rating",
     "positiveReviews": "Positive Reviews",
     "negativeReviews": "Negative Reviews",
+    "ratingMessage": {
+      "critical": "Your rating needs immediate attention. Focus on addressing customer concerns and improving service quality. Every improvement counts!",
+      "low": "There's significant room for improvement. Review negative feedback and implement changes. You're on the right track to better ratings!",
+      "good": "You're doing well! Keep focusing on customer satisfaction and addressing feedback. Small improvements can push you to excellent ratings!",
+      "veryGood": "Excellent work! You're close to outstanding. Continue maintaining high standards and responding to customer feedback to reach the top!",
+      "excellent": "Outstanding! You're delivering exceptional customer experiences. Keep up the excellent work and maintain these high standards!"
+    },
     "topics": "Topics",
     "topicsDescription": "Common themes discussed in reviews",
     "showLess": "Show Less",
