Enhance AverageRatingCard and ImprovementsCard with date range display and localization updates
- Added optional dateRange prop to AverageRatingCard and ImprovementsCard components, allowing for dynamic display of date ranges alongside average ratings and insights.
- Updated layout in both components to incorporate date range information, improving clarity and user context.
- Enhanced localization files for English and French to include new strings for date range, ensuring accessibility and consistency across languages.
- Implemented a helper function in CompanyPage to format and display the date range based on user-selected filters, enriching the overall user experience.

This update strengthens the presentation of review statistics and insights on CompanyPage, providing users with meaningful context during their analysis.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -664,6 +664,7 @@
     "dataFiltersDescription": "Filter all data on this page by location, date, keyword, rating, and topic",
     "clearAll": "Clear all",
     "allLocations": "All Locations",
+    "allTime": "All Time",
     "dateRange": "Date Range",
     "ytd": "YTD",
     "last3Months": "Last 3 Months",
