Enhance ObjectiveProgressChart and ObjectivesCard with loading states and new features
- Updated ObjectiveProgressChart to include skeleton loading for improved user experience during data fetching.
- Refactored ObjectivesCard to manage selected objectives and fetch enriched reviews dynamically, enhancing interactivity.
- Introduced new localization strings for objectives, including status labels and error messages, ensuring consistency across languages.
- Enhanced the layout of both components to align with the project's UI/UX standards, providing clearer insights into objectives and their progress.

This update strengthens the objectives management functionality by improving loading feedback and enhancing user engagement with goal tracking.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -874,5 +874,75 @@
     "dialogTitle": "Upgrade Required",
     "viewPricing": "View Pricing",
     "cancel": "Cancel"
+  },
+  "objectives": {
+    "title": "My Objectives",
+    "subtitle": "Track your objectives and actions to improve daily customer experience",
+    "createObjective": "Create Objective",
+    "editObjective": "Edit Objective",
+    "name": "Name",
+    "namePlaceholder": "e.g., Achieve 4.6 stars",
+    "description": "Description",
+    "descriptionPlaceholder": "Optional description of the objective",
+    "startDate": "Start Date",
+    "endDate": "End Date",
+    "targetRating": "Target Rating",
+    "targetRatingHelper": "Optional: Target average rating (0-5)",
+    "targetSentiment": "Target Sentiment Score",
+    "targetSentimentHelper": "Optional: Target sentiment score (0-100, where 50 is neutral)",
+    "priority": "Priority",
+    "priorityHigh": "High",
+    "priorityMedium": "Medium",
+    "priorityLow": "Low",
+    "allPriorities": "All Priorities",
+    "quarter": "Quarter",
+    "allQuarters": "All",
+    "statusLabel": "Status",
+    "allGoals": "All Goals",
+    "progress": "Progress",
+    "targetCompletionDate": "Target Completion Date",
+    "progressionGlobale": "Global Progress",
+    "noObjectives": "No objectives yet",
+    "noObjectivesFound": "No objectives found",
+    "total": "Total",
+    "keywords": "Keywords",
+    "keywordsDescription": "Select up to {{max}} keywords ({{selected}}/{{max}} selected)",
+    "topics": "Topics",
+    "topicsDescription": "Select up to {{max}} topics ({{selected}}/{{max}} selected)",
+    "searchKeywords": "Search keywords...",
+    "searchTopics": "Search topics...",
+    "noKeywords": "No keywords available",
+    "noTopics": "No topics available",
+    "steps": {
+      "general": "General",
+      "targets": "Targets"
+    },
+    "status": {
+      "notStarted": "Not Started",
+      "inProgress": "In Progress",
+      "achieved": "Achieved",
+      "overdue": "Overdue",
+      "failed": "Failed"
+    },
+    "current": "Current",
+    "target": "Target",
+    "overallRating": "Overall Rating",
+    "detailedBreakdown": "Detailed Breakdown",
+    "statusIndicators": {
+      "onTrack": "On Track",
+      "close": "Close",
+      "offTrack": "Off Track",
+      "far": "Far from Target"
+    },
+    "errors": {
+      "nameRequired": "Name is required",
+      "startDateRequired": "Start date is required",
+      "endDateRequired": "End date is required",
+      "endDateBeforeStart": "End date must be after start date",
+      "atLeastOneTarget": "Please define at least one target (rating, sentiment, keyword, or topic)",
+      "saveFailed": "Failed to save objective"
+    },
+    "confirmDelete": "Confirm Deletion",
+    "deleteMessage": "Are you sure you want to delete this objective? This action cannot be undone."
   }
 }
