Enhance ObjectiveProgressChart and ObjectiveStatusIndicator with sentiment analysis features
- Updated ObjectiveProgressChart to compute and display current sentiment scores for reviews within the objective timeframe, improving insights into user feedback.
- Enhanced ObjectiveStatusIndicator to support sentiment type, normalizing sentiment scores for better visual representation.
- Added new localization strings for sentiment score in English and French, ensuring consistency across languages.
- Refactored data fetching in useEnrichedReviews to include sentiment analysis data, enriching the review data model.

This update strengthens the objectives management functionality by integrating sentiment analysis, enhancing user engagement and understanding of review feedback.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -927,6 +927,7 @@
     "current": "Current",
     "target": "Target",
     "overallRating": "Overall Rating",
+    "sentimentScore": "Sentiment Score",
     "detailedBreakdown": "Detailed Breakdown",
     "statusIndicators": {
       "onTrack": "On Track",
