--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -927,6 +927,7 @@
     "current": "Actuel",
     "target": "Cible",
     "overallRating": "Note globale",
+    "sentimentScore": "Score de sentiment",
     "detailedBreakdown": "Détails par objectif",
     "statusIndicators": {
       "onTrack": "Sur la bonne voie",
