Refactor ObjectiveProgressChart and ObjectiveStatusIndicator for improved layout and loading states
- Updated ObjectiveProgressChart to enhance the layout for displaying overall ratings and sentiment scores, improving visual clarity and user engagement.
- Introduced a vertical separator between overall rating and sentiment score sections for better organization.
- Refactored ObjectiveStatusIndicator to support a column layout, enhancing the presentation of current and target values with improved styling.
- Replaced Box components with Grid and Paper for keyword and topic targets, aligning with the project's UI/UX standards and improving responsiveness.
- Enhanced spacing and alignment for a more polished look, ensuring a consistent user experience.

This update strengthens the objectives management functionality by improving layout organization and visual feedback during data loading.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -746,6 +746,7 @@
       "overview": "Overview",
       "reviews": "Reviews",
       "analytics": "Analytics",
+      "objectives": "Objectives",
       "locations": "Locations",
       "settings": "Settings"
     }
