Enhance ObjectiveProgressChart with objective score display and service integration
- Updated ObjectiveProgressChart to include a new section displaying the objective score, improving user insights into goal progress.
- Integrated ObjectivesService for client-side progress calculations, enhancing the accuracy of overall progress metrics.
- Added localization strings for "Objective Score" in English and French, ensuring consistency across languages.
- Improved layout and styling for the objective score display, aligning with the project's UI/UX standards.

This update strengthens the objectives management functionality by providing clearer insights into objective performance and enhancing user engagement.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -927,6 +927,7 @@
     },
     "current": "Current",
     "target": "Target",
+    "objectiveScore": "Objective Score",
     "overallRating": "Overall Rating",
     "sentimentScore": "Sentiment Score",
     "detailedBreakdown": "Detailed Breakdown",
