Enhance ObjectivesCard with status calculation and localization updates
- Introduced a new function, calculateObjectiveStatus, to determine the status of objectives based on progress and timespan completion, improving the accuracy of objective tracking.
- Updated ObjectivesCard to include the calculated status, overriding the database status for better user insights.
- Modified French localization strings for consistency, changing "Échoué" to "Echec".

This update strengthens the objectives management functionality by providing clearer insights into objective performance and enhancing user engagement.

--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -922,7 +922,7 @@
       "inProgress": "En cours",
       "achieved": "Atteints",
       "overdue": "En retard",
-      "failed": "Échoué"
+      "failed": "Echec"
     },
     "current": "Actuel",
     "target": "Cible",
